2006-02-20 Braden McDaniel  <braden@endoframe.com>

	Set the scene profile in scene::load(resource_istream&).  The
	profile stuff is inadequate; but this hack will let it hobble
	along until a comprehensive fix is applied.  That is, it should
	allow VRML97 to continue to work.

	* src/libopenvrml/openvrml/browser.cpp
	(openvrml::scene::load(resource_istream &)): Set the scene profile.

2006-02-19 Braden McDaniel  <braden@endoframe.com>

	Removed OPENVRML_API from class templates.  The Microsoft compiler
	doesn't like it there; and it probably shouldn't be there anyway.

	* src/libopenvrml/openvrml/event.h
	(openvrml::field_value_listener<FieldValue>): Removed
	OPENVRML_API.
	(openvrml::node_field_value_listener<FieldValue>): Removed
	OPENVRML_API.
	(openvrml::field_value_emitter<FieldValue>): Removed OPENVRML_API.

2006-02-19 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/field_value.h
	(openvrml::field_value): The Microsoft C/C++ compiler 14.0 seems
	picky about requiring the OPENVRML_API macro in the friend
	declaration of operator<<.

2006-02-19 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/basetypes.h
	(openvrml::vec3f): Added missing OPENVRML_API.
	(openvrml::vec3d): Added missing OPENVRML_API.

2006-02-19 Braden McDaniel  <braden@endoframe.com>

	Added member functions to return the root scope from
	openvrml::browser and openvrml::scene.

	* src/libopenvrml/openvrml/browser.cpp
	(openvrml::browser::root_scope() const): Added function.  Return
	the root scope.
	(openvrml::scene::root_scope() const): Added function.  Return
	the root scope.
	* src/libopenvrml/openvrml/browser.h
	(openvrml::browser): Added member function root_scope.
	(openvrml::scene): Added member function root_scope.

2006-02-19 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/node.h
	(openvrml::node::scope() const): Return a reference to a const
	scope.

2006-02-18 Braden McDaniel  <braden@endoframe.com>
